--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,15 +10,14 @@
 <body>
   <div class="menu">
         <ul>
-            <li><a href="/">Home</a>
+          <li><%= link_to 'home', '/' %>
             </li>
-            <li><a href="/about">About</a>
+            <li><%= link_to 'about', '/about' %>
             </li>
-            <li><a href="/signups/new">Contact</a>
+            <li><%= link_to 'contact', '/contact' %>
             </li>
         </ul> <img alt="Close" class="icon-close" src="https://stories-rails.herokuapp.com/assets/close-0c9147fa56a8cfd00e1f6b29e91458dc.svg" width="24px" /> 
 </div>
-<div class="home-main"> <img alt="Open" class="icon-menu" src="https://stories-rails.herokuapp.com/assets/open-9688b19dacd0cc7d027490776ace74ff.svg" width="24px" />
 
 <%= yield %>
    <div class="footer">
