--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,8 @@
             <div class="row">
                 <div class="content col-md-6 col-md-offset-6">
                     <h1>Create and share Stories</h1>
-                    <p><a class="btn btn-primary" href="about">Learn more</a>
+                    <!-- <p><a class="btn btn-primary" href="about">Learn more</a> -->
+                  <p> <%= link_to 'learn more', 'about', class:"btn btn-primary" %>
                     </p>
                 </div>
             </div>
